# SitterGo

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  requirments.txt
app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
app/api/: urls.py  views.py
app/migrations/: 0001_initial.py  0002_offer_user_delete_sitter.py  0003_alter_offer_title.py  0004_delete_user.py  0005_remove_offer_published_date.py  0010_alter_offer_author.py
djangoProjectDoggyStyle/: asgi.py  settings.py  urls.py  wsgi.py
static/scss/bootstrap/: _reboot.scss
templates/: about.html  index.html
templates/offers/: create_offer.html  my_offers.html  offers.html  update_offer.html
templates/registration/: logout.html  profile.html  register.html
templates/responds/: create_respond.html  delete_respond.html  my_responds.html
